--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -3,7 +3,7 @@
 fieldset {
   border: none;
   background-color: $main-200;
-  border-radius: .5em;
+  border-radius: .2em;
   padding: 2em 1em;
 
   & input+label {
@@ -15,21 +15,21 @@ fieldset {
     background-color: $main-100;
     border-radius: .5em;
     border: 2px solid $accent-300;
-    transition: box-shadow 200ms ease-in-out;
+    transition: box-shadow 200ms ease, color 200ms ease;
 
     &:focus {
       border-color: $accent-400;
       box-shadow: 0 0 0 3px $accent-200;
       outline: 3px solid transparent;
+      background-color: white;
     }
   }
 }
 
 form>input {
-  border-radius: .5em;
+  border-radius: 2rem;
   border: none;
-  box-shadow: 0 0 0 0px rgba(0, 0, 0, 0);
-  padding: .7em .75em .5em;
+  padding: .7em 2em .5em;
   cursor: pointer;
   background-color: $main-400;
   color: white;
@@ -38,7 +38,6 @@ form>input {
   &:hover {
     background-color: $accent-400;
     color: black;
-    box-shadow: 0 0 0 2px black;
   }
 
   &:focus {
