--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -1,48 +1,72 @@
 /* color themes */
-$main-400-light: hsl(235, 17%, 60%);
-$main-300-light: hsl(233, 17%, 72%);
-$main-200-light: hsl(230, 18%, 80%);
-$main-100-light: hsl(233, 17%, 90%);
+:root {
+  --main-400-light: hsl(235, 56%, 84%);
+  --main-300-light: hsl(233, 17%, 72%);
+  --main-200-light: hsl(230, 18%, 80%);
+  --main-100-light: #e1e2ea;
+  --accent-700-light: #b86200;
+  --accent-400-light: #ffae52;
+  --accent-300-light: hsl(32, 100%, 76%);
+  --accent-200-light: hsl(32, 100%, 86%);
+  --accent-100-light: hsl(33, 100%, 96%);
+  --body-text-light: #313131;
+  --link-text-light: blue;
+  --focus-color-light: black;
+  --h2-color-light: var(--body-text-light);
+  --form-text-light: var(--body-text-light);
+  --button-text-light: var(--body-text-light);
 
-$accent-700-light: hsl(32, 100%, 36%);
-$accent-400-light: hsl(32, 100%, 66%);
-$accent-300-light: hsl(32, 100%, 76%);
-$accent-200-light: hsl(32, 100%, 86%);
-$accent-100-light: hsl(33, 100%, 96%);
+  --main-400-dark: hsl(240, 13%, 85%);
+  --main-300-dark: hsl(240, 13%, 65%);
+  --main-200-dark: hsl(240, 13%, 45%);
+  --main-100-dark: rgb(55, 55, 72);
+  --accent-700-dark: hsl(43, 52%, 35%);
+  --accent-400-dark: #c8a651;
+  --accent-300-dark: hsl(43, 52%, 65%);
+  --accent-200-dark: hsl(43, 52%, 75%);
+  --accent-100-dark: hsl(43, 52%, 85%);
+  --body-text-dark: #D6D6D6;
+  --link-text-dark: lightblue;
+  --focus-color-dark: rgb(43, 202, 255);
+  --h2-color-dark: #2c2c2c;
+  --form-text-dark: white;
+  --button-text-dark: black;
 
-$main-400-dark: hsl(235, 56%, 84%);
-$main-300-dark: hsl(233, 17%, 72%);
-$main-200-dark: hsl(230, 18%, 80%);
-$main-100-dark: hsl(235, 17%, 60%);
+  --main-400: var(--main-400-light);
+  --main-300: var(--main-300-light);
+  --main-200: var(--main-200-light);
+  --main-100: var(--main-100-light);
 
-$accent-700-dark: hsl(32, 100%, 36%);
-$accent-400-dark: hsl(32, 100%, 66%);
-$accent-300-dark: hsl(32, 100%, 76%);
-$accent-200-dark: hsl(32, 100%, 86%);
-$accent-100-dark: hsl(33, 100%, 96%);
+  --accent-700: var(--accent-700-light);
+  --accent-400: var(--accent-400-light);
+  --accent-300: var(--accent-300-light);
+  --accent-200: var(--accent-200-light);
+  --accent-100: var(--accent-100-light);
 
-$main-400: $main-400-light;
-$main-300: $main-300-light;
-$main-200: $main-200-light;
-$main-100: $main-100-light;
+  --body-text: var(--body-text-light);
+  --link-text: var(--link-text-light);
+  --focus-color: var(--focus-color-light);
+  --h2-color: var(--h2-color-light);
+  --form-text: var(--form-text-light);
+  --button-text: var(--button-text-light);
 
-$accent-700: $accent-700-light;
-$accent-400: $accent-400-light;
-$accent-300: $accent-300-light;
-$accent-200: $accent-200-light;
-$accent-100: $accent-100-light;
-
-@media (prefers-color-scheme: dark) {
-  $main-400: $main-400-dark;
-  $main-300: $main-300-dark;
-  $main-200: $main-200-dark;
-  $main-100: $main-100-dark;
-
-  $accent-700: $accent-700-dark;
-  $accent-400: $accent-400-dark;
-  $accent-300: $accent-300-dark;
-  $accent-200: $accent-200-dark;
-  $accent-100: $accent-100-dark;
+  @media (prefers-color-scheme: dark) {
+    --main-400: var(--main-400-dark);
+    --main-300: var(--main-300-dark);
+    --main-200: var(--main-200-dark);
+    --main-100: var(--main-100-dark);
+    --accent-700: var(--accent-700-dark);
+    --accent-400: var(--accent-400-dark);
+    --accent-300: var(--accent-300-dark);
+    --accent-200: var(--accent-200-dark);
+    --accent-100: var(--accent-100-dark);
+    --body-text: var(--body-text-dark);
+    --link-text: var(--link-text-dark);
+    --focus-color: var(--focus-color-dark);
+    --h2-color: var(--h2-color-dark);
+    --form-text: var(--form-text-dark);
+    --button-text: var(--button-text-dark);
+  }
 }
 
 
