--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -27,7 +27,7 @@
   --accent-100-dark: hsl(43, 52%, 85%);
   --body-text-dark: #D6D6D6;
   --link-text-dark: lightblue;
-  --focus-color-dark: rgb(43, 202, 255);
+  --focus-color-dark: white;
   --h2-color-dark: #2c2c2c;
   --form-text-dark: white;
   --button-text-dark: black;
