--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -31,18 +31,54 @@
   --h2-color-dark: #2c2c2c;
   --form-text-dark: white;
   --button-text-dark: black;
+}
 
+body.light {
   --main-400: var(--main-400-light);
   --main-300: var(--main-300-light);
   --main-200: var(--main-200-light);
   --main-100: var(--main-100-light);
-
   --accent-700: var(--accent-700-light);
   --accent-400: var(--accent-400-light);
   --accent-300: var(--accent-300-light);
   --accent-200: var(--accent-200-light);
   --accent-100: var(--accent-100-light);
+  --body-text: var(--body-text-light);
+  --link-text: var(--link-text-light);
+  --focus-color: var(--focus-color-light);
+  --h2-color: var(--h2-color-light);
+  --form-text: var(--form-text-light);
+  --button-text: var(--button-text-light);
+}
 
+body.dark {
+  --main-400: var(--main-400-dark);
+  --main-300: var(--main-300-dark);
+  --main-200: var(--main-200-dark);
+  --main-100: var(--main-100-dark);
+  --accent-700: var(--accent-700-dark);
+  --accent-400: var(--accent-400-dark);
+  --accent-300: var(--accent-300-dark);
+  --accent-200: var(--accent-200-dark);
+  --accent-100: var(--accent-100-dark);
+  --body-text: var(--body-text-dark);
+  --link-text: var(--link-text-dark);
+  --focus-color: var(--focus-color-dark);
+  --h2-color: var(--h2-color-dark);
+  --form-text: var(--form-text-dark);
+  --button-text: var(--button-text-dark);
+}
+
+body.system {
+  --main-400: var(--main-400-light);
+  --main-300: var(--main-300-light);
+  --main-200: var(--main-200-light);
+  --main-100: var(--main-100-light);
+  --accent-700: var(--accent-700-light);
+  --accent-400: var(--accent-400-light);
+  --accent-300: var(--accent-300-light);
+  --accent-200: var(--accent-200-light);
+  --accent-100: var(--accent-100-light);
   --body-text: var(--body-text-light);
   --link-text: var(--link-text-light);
   --focus-color: var(--focus-color-light);
