--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -431,7 +431,7 @@ ul {
 
 input {
   font-family: inherit;
-  padding: .25em 0.5em;
+  padding: .3em .5em 0.15em;
   line-height: 1;
 }
 
@@ -439,6 +439,7 @@ textarea {
   font-family: inherit;
   resize: vertical;
   padding: .3em;
+  line-height: 1.2;
 }
 
 h2 {
