--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,7 @@ ul {
 
 input {
   font-family: inherit;
-  padding: 0.25em 0.5em;
+  padding: 0.3em 0.5em 0.15em;
   line-height: 1;
 }
 
@@ -332,6 +332,7 @@ textarea {
   font-family: inherit;
   resize: vertical;
   padding: 0.3em;
+  line-height: 1.2;
 }
 
 h2 {
@@ -642,13 +643,17 @@ body {
   gap: 1em;
   padding-block: 0.3em;
   padding-inline: 0.5em;
-  border: 2px solid var(--main-400);
+  border: 2px solid var(--main-300);
 }
 .theme-toggle label {
   position: relative;
 }
 .theme-toggle input {
-  display: none;
+  opacity: 0;
+  position: absolute;
+}
+.theme-toggle input:focus ~ label {
+  box-shadow: 0 0 0 2px var(--focus-color);
 }
 .theme-toggle input:checked ~ label {
   color: var(--button-text);
@@ -1185,8 +1190,8 @@ body {
   padding: 2em 1em;
 }
 .contact__form fieldset input + label {
-  -webkit-margin-before: 1em;
-          margin-block-start: 1em;
+  -webkit-margin-before: clamp(1rem, 0.92rem + 0.39vw, 1.25rem);
+          margin-block-start: clamp(1rem, 0.92rem + 0.39vw, 1.25rem);
 }
 .contact__form fieldset input, .contact__form fieldset textarea {
   color: var(--form-text);
@@ -1203,7 +1208,7 @@ body {
   background-color: white;
 }
 
-form > input {
+form > input[type=submit] {
   border-radius: 2rem;
   border: none;
   padding: 0.7em 4em 0.5em;
@@ -1212,17 +1217,13 @@ form > input {
   color: var(--button-text);
   transition: color 200ms, background-color 200ms, box-shadow 200ms;
 }
-form > input:hover {
+form > input[type=submit]:hover {
   background-color: var(--accent-400);
   color: black;
 }
-form > input:focus {
+form > input[type=submit]:focus {
   outline: none;
   box-shadow: 0 0 0 4px var(--focus-color);
-}
-
-input[type=submit] {
-  transition: color 200ms, background-color 200ms, box-shadow 200ms;
 }
 
 .contact {
