--- a/src/scss/components/_theme-toggle.scss
+++ b/src/scss/components/_theme-toggle.scss
@@ -8,7 +8,7 @@
     gap: 1em;
     padding-block: .3em;
     padding-inline: .5em;
-    border: 2px solid var(--main-400);
+    border: 2px solid var(--main-300);
   }
 
   & label {
@@ -16,7 +16,12 @@
   }
 
   & input {
-    display: none;
+    opacity: 0;
+    position: absolute;
+  }
+
+  input:focus~label {
+    box-shadow: 0 0 0 2px var(--focus-color);
   }
 
   input:checked~label {
