--- a/css/main.css
+++ b/css/main.css
@@ -344,9 +344,9 @@ h2 {
   --main-400-light: hsl(235, 56%, 84%);
   --main-300-light: hsl(233, 17%, 72%);
   --main-200-light: hsl(230, 18%, 80%);
-  --main-100-light: #e1e2ea;
-  --accent-700-light: #b86200;
-  --accent-400-light: #ffae52;
+  --main-100-light: hsl(233, 18%, 90%);
+  --accent-700-light: hsl(32, 100%, 36%);
+  --accent-400-light: hsl(32, 100%, 66%);
   --accent-300-light: hsl(32, 100%, 76%);
   --accent-200-light: hsl(32, 100%, 86%);
   --accent-100-light: hsl(33, 100%, 96%);
@@ -356,12 +356,12 @@ h2 {
   --h2-color-light: var(--body-text-light);
   --form-text-light: var(--body-text-light);
   --button-text-light: var(--body-text-light);
-  --main-400-dark: hsl(240, 13%, 85%);
-  --main-300-dark: hsl(240, 13%, 65%);
-  --main-200-dark: hsl(240, 13%, 45%);
-  --main-100-dark: rgb(55, 55, 72);
+  --main-400-dark: hsl(240, 13%, 55%);
+  --main-300-dark: hsl(240, 13%, 45%);
+  --main-200-dark: hsl(240, 13%, 35%);
+  --main-100-dark: hsl(240, 13%, 25%);
   --accent-700-dark: hsl(43, 52%, 35%);
-  --accent-400-dark: #c8a651;
+  --accent-400-dark: hsl(43, 52%, 55%);
   --accent-300-dark: hsl(43, 52%, 65%);
   --accent-200-dark: hsl(43, 52%, 75%);
   --accent-100-dark: hsl(43, 52%, 85%);
@@ -451,6 +451,7 @@ body.system {
 a {
   color: inherit;
   position: relative;
+  transition: box-shadow 200ms;
   /* underline */
 }
 a:before {
@@ -635,8 +636,9 @@ body {
 
 .theme-toggle {
   position: absolute;
-  inset-inline-end: 1em;
-  inset-block-start: 200px;
+  inset-inline-end: 50%;
+  inset-block-start: 185px;
+  transform: translateX(50%);
 }
 .theme-toggle fieldset {
   display: flex;
@@ -644,28 +646,30 @@ body {
   padding-block: 0.3em;
   padding-inline: 0.5em;
   border: 2px solid var(--main-300);
+  border-radius: 0.2em;
+  transition: border 200ms;
+}
+.theme-toggle fieldset:focus-within {
+  border-color: var(--focus-color);
+  transition: border-color 200ms;
 }
 .theme-toggle label {
   position: relative;
+  font-size: clamp(1rem, 0.92rem + 0.39vw, 1.25rem);
+  text-transform: uppercase;
 }
 .theme-toggle input {
   opacity: 0;
   position: absolute;
 }
-.theme-toggle input:focus ~ label {
-  box-shadow: 0 0 0 2px var(--focus-color);
-}
-.theme-toggle input:checked ~ label {
-  color: var(--button-text);
-}
 .theme-toggle input:checked ~ label::after {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 1.2em;
+  width: 110%;
+  height: 0.2em;
   background-color: var(--accent-300);
-  inset-block-start: 0.1em;
-  inset-inline-start: 0;
+  inset-block-start: -0.2em;
+  inset-inline-start: -5%;
   z-index: -1;
 }
 
@@ -1213,7 +1217,7 @@ form > input[type=submit] {
   border: none;
   padding: 0.7em 4em 0.5em;
   cursor: pointer;
-  background-color: var(--main-200);
+  background-color: var(--main-400);
   color: var(--button-text);
   transition: color 200ms, background-color 200ms, box-shadow 200ms;
 }
