--- a/src/scss/components/_theme-toggle.scss
+++ b/src/scss/components/_theme-toggle.scss
@@ -1,7 +1,10 @@
+@use '../utilities/variables' as *;
+
 .theme-toggle {
   position: absolute;
-  inset-inline-end: 1em;
-  inset-block-start: 200px;
+  inset-inline-end: 50%;
+  inset-block-start: 185px;
+  transform: translateX(50%);
 
   fieldset {
     display: flex;
@@ -9,10 +12,19 @@
     padding-block: .3em;
     padding-inline: .5em;
     border: 2px solid var(--main-300);
+    border-radius: .2em;
+    transition: border 200ms;
+
+    &:focus-within {
+      border-color: var(--focus-color);
+      transition: border-color 200ms;
+    }
   }
 
   & label {
     position: relative;
+    font-size: $step-0;
+    text-transform: uppercase;
   }
 
   & input {
@@ -20,22 +32,16 @@
     position: absolute;
   }
 
-  input:focus~label {
-    box-shadow: 0 0 0 2px var(--focus-color);
-  }
 
-  input:checked~label {
-    color: var(--button-text);
-  }
 
   input:checked~label::after {
     content: '';
     position: absolute;
-    width: 100%;
-    height: 1.2em;
+    width: 110%;
+    height: .2em;
     background-color: var(--accent-300);
-    inset-block-start: .1em;
-    inset-inline-start: 0;
+    inset-block-start: -.2em;
+    inset-inline-start: -5%;
     z-index: -1;
 
   }
