--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -3,9 +3,9 @@
   --main-400-light: hsl(235, 56%, 84%);
   --main-300-light: hsl(233, 17%, 72%);
   --main-200-light: hsl(230, 18%, 80%);
-  --main-100-light: #e1e2ea;
-  --accent-700-light: #b86200;
-  --accent-400-light: #ffae52;
+  --main-100-light: hsl(233, 18%, 90%);
+  --accent-700-light: hsl(32, 100%, 36%);
+  --accent-400-light: hsl(32, 100%, 66%);
   --accent-300-light: hsl(32, 100%, 76%);
   --accent-200-light: hsl(32, 100%, 86%);
   --accent-100-light: hsl(33, 100%, 96%);
@@ -16,12 +16,12 @@
   --form-text-light: var(--body-text-light);
   --button-text-light: var(--body-text-light);
 
-  --main-400-dark: hsl(240, 13%, 85%);
-  --main-300-dark: hsl(240, 13%, 65%);
-  --main-200-dark: hsl(240, 13%, 45%);
-  --main-100-dark: rgb(55, 55, 72);
+  --main-400-dark: hsl(240, 13%, 55%);
+  --main-300-dark: hsl(240, 13%, 45%);
+  --main-200-dark: hsl(240, 13%, 35%);
+  --main-100-dark: hsl(240, 13%, 25%);
   --accent-700-dark: hsl(43, 52%, 35%);
-  --accent-400-dark: #c8a651;
+  --accent-400-dark: hsl(43, 52%, 55%);
   --accent-300-dark: hsl(43, 52%, 65%);
   --accent-200-dark: hsl(43, 52%, 75%);
   --accent-100-dark: hsl(43, 52%, 85%);
@@ -31,6 +31,7 @@
   --h2-color-dark: #2c2c2c;
   --form-text-dark: white;
   --button-text-dark: black;
+
 }
 
 body.light {
