--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -30,6 +30,10 @@
     transform: translateX(50px);
     transition: opacity 500ms, transform 700ms $ease-elastic-5;
 
+    @media (prefers-reduced-motion) {
+      transform: none;
+    }
+
     &.in-view {
       opacity: 1;
       transform: translateX(0);
@@ -40,6 +44,10 @@
     opacity: 0;
     transform: translateX(-50px);
     transition: opacity 500ms, transform 700ms $ease-elastic-5;
+
+    @media (prefers-reduced-motion) {
+      transform: none;
+    }
 
     &.in-view {
       opacity: 1;
