--- a/css/main.css
+++ b/css/main.css
@@ -461,7 +461,7 @@ a:before {
   background-color: var(--accent-400);
   position: absolute;
   inset-inline-end: 0;
-  inset-block-end: 0;
+  inset-block-end: 0.2em;
   transition: all 300ms ease;
 }
 a:hover {
@@ -633,6 +633,14 @@ body {
 .nav__link {
   padding: 0em 0.75em;
 }
+.nav__link::before {
+  width: 0;
+  height: 0;
+}
+.nav__link:hover::before {
+  width: 0;
+  height: 0;
+}
 
 .theme-toggle {
   position: absolute;
@@ -736,13 +744,17 @@ body {
     transform: translateX(-100%);
   }
 }
-@media (prefers-reduced-motion: no-preference) {
-  .moving {
-    -webkit-animation: glide 3.5s cubic-bezier(0.23, 0.36, 0.28, 0.83) 1;
-            animation: glide 3.5s cubic-bezier(0.23, 0.36, 0.28, 0.83) 1;
-  }
+.moving {
+  -webkit-animation: glide 3.5s cubic-bezier(0.23, 0.36, 0.28, 0.83) 1;
+          animation: glide 3.5s cubic-bezier(0.23, 0.36, 0.28, 0.83) 1;
 }
 
+@media (prefers-reduced-motion) {
+  .moving {
+    -webkit-animation: none;
+            animation: none;
+  }
+}
 .about {
   -webkit-margin-before: 5rem;
           margin-block-start: 5rem;
@@ -847,6 +859,11 @@ body {
   transform: translateX(50px);
   transition: opacity 500ms, transform 700ms cubic-bezier(0.5, 1.75, 0.75, 1.25);
 }
+@media (prefers-reduced-motion) {
+  .projects .project.right {
+    transform: none;
+  }
+}
 .projects .project.right.in-view {
   opacity: 1;
   transform: translateX(0);
@@ -855,6 +872,11 @@ body {
   opacity: 0;
   transform: translateX(-50px);
   transition: opacity 500ms, transform 700ms cubic-bezier(0.5, 1.75, 0.75, 1.25);
+}
+@media (prefers-reduced-motion) {
+  .projects .project.left {
+    transform: none;
+  }
 }
 .projects .project.left.in-view {
   opacity: 1;
@@ -1215,7 +1237,7 @@ body {
 form > input[type=submit] {
   border-radius: 2rem;
   border: none;
-  padding: 0.7em 4em 0.5em;
+  padding: 0.7em 4em 0.4em;
   cursor: pointer;
   background-color: var(--main-400);
   color: var(--button-text);
