--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -64,5 +64,15 @@
 
 	&__link {
 		padding: 0em .75em;
+
+		&::before {
+			width: 0;
+			height: 0;
+		}
+
+		&:hover::before {
+			width: 0;
+			height: 0;
+		}
 	}
 }
