--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -64,7 +64,11 @@
 }
 
 .moving {
-  @media (prefers-reduced-motion: no-preference) {
-    animation: glide 3.5s cubic-bezier(0.23, 0.36, 0.28, 0.83) 1;
+  animation: glide 3.5s cubic-bezier(0.23, 0.36, 0.28, 0.83) 1;
+}
+
+@media (prefers-reduced-motion) {
+  .moving {
+    animation: none;
   }
 }
