--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -16,7 +16,7 @@ h1 {
   font-size: var.$step-4;
   font-weight: 600;
   text-transform: uppercase;
-  letter-spacing: 0.215em;
+  letter-spacing: var.$space-3xs;
 }
 
 h2 {
