--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -182,3 +182,10 @@ $offset in mixin.$wordSpacing {
     }
   }
 }
+
+.more {
+  max-width: 60ch;
+  margin-inline: auto;
+  margin-block: $space-xl;
+  padding: .5em;
+}
