--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -7,5 +7,5 @@ body {
   background-color: var(--main-100);
   font-family: type.$font;
   overflow-x: hidden;
-  transition: background-color 200ms, color 200ms;
+  transition: background-color 500ms ease-out, color 500ms ease-out;
 }
